replace a map with a collection